fixes bug on safari

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -10,9 +10,7 @@ footer {
 
     background-color: #202124;
     margin: 0 auto;
-    max-width: 100vw;
-
-    justify-content: center;
+    width: 100vw;
 }
 
 footer #footer-content {
@@ -20,10 +18,9 @@ footer #footer-content {
     padding-right: min(2.5rem, 2.5vw);
     padding-bottom: min(1.75rem, 1.75vh);
 
-    max-width: 100vw;
-    min-width: fit-content;
+    width: 100vw;
     
-    justify-content: start;
+    justify-content: center;
     display: flex;
     flex-wrap: wrap;
 }
